<resources>
  <string name="app_name">WallR</string>
  <string name="explore_images">EXPLORE</string>
  <string name="recent_images">RECENT</string>
  <string name="popular_images">POPULAR</string>
  <string name="standouts_images">STANDOUTS</string>
  <string name="buildings_images">BUILDINGS</string>
  <string name="food_images">FOOD</string>
  <string name="nature_images">NATURE</string>
  <string name="objects_images">OBJECTS</string>
  <string name="people_images">PEOPLE</string>
  <string name="technology_images">TECHNOLOGY</string>
  <string name="explore_fragment_tag">Explore</string>
  <string name="top_picks_fragment_tag">Top Picks</string>
  <string name="categories_fragment_tag">Categories</string>
  <string name="minimal_fragment_tag">Minimal</string>
  <string name="collection_fragment_tag">Collections</string>
  <string name="feedback_fragment_tag">Feedback</string>
  <string name="guillotine_buy_pro_title">Buy Pro</string>
  <string name="guillotine_pro_badge">PRO</string>
  <string name="generic_error_message">Something went wrong. Please try again</string>
  <string name="no_internet_message">Please ensure you have a working internet connection</string>
  <string name="cancel_text">Cancel</string>
  <string name="unable_to_load_hd_image_error">
    Unable to load high-definition preview. Please ensure you have a working internet connection</string>
  <string name="storage_permission_denied_error">
    Storage permission is required to continue using this app. Please GRANT the permission when asked for</string>
  <string name="unsuccessful_purchase_error">Purchase not successful. Please try again</string>
  <string name="already_present_in_collection_error_message">Wallpaper is already present in the collection</string>
  <string name="finalizing_stuff_wait_message">Finalizing stuff. Please wait…</string>
  <string name="finalizing_wallpaper_messsage">Finalizing wallpaper...</string>
  <string name="adding_image_to_collections_message">Adding wallpaper to collection...</string>
  <string name="add_to_collection_success_message">Wallpaper has been added to collection!</string>
  <string name="download_finished_success_message">Your wallpaper has finished downloading</string>
  <string name="share_intent_message">Get high-quality wallpapers for your Android device with WallR at %1$s</string>
  <string name="share_link_using">Share link using</string>
  <string name="preparing_shareable_wallpaper_message">Preparing shareable wallpaper...</string>
  <string name="not_enough_free_space_error_message">Low on memory. Please free some memory for app to work</string>
  <string name="set_wallpaper_success_message">Your wallpaper has been set!</string>
  <string name="set_wallpaper_error_message">Couldn\'t set wallpaper</string>
  <string name="crystallizing_wallpaper_wait_message">Crystallizing wallpaper. Please wait…</string>
  <string name="crystallizing_wallpaper_successful_message">Wallpaper has been crystallized!</string>
  <string name="main_activity_no_email_client_error">There is no email client installed</string>
  <string name="main_activity_exit_confirmation_message">Press back again to exit</string>
  <string name="main_activity_feedback_contact_using_message">Contact using</string>
  <string name="search_menu_title">search</string>
  <string name="main_activity_hamburger_hint_title">100K+ High-Quality Wallpapers</string>
  <string name="main_activity_hamburger_hint_description">Choose from more than 100K wallpapers from various categories to meet all your needs.</string>
  <string name="main_activity_switch_layout_automatic_wallpaper_changer">Automatic Wallpaper Changer</string>
  <string name="fragment_unable_to_load_wallpapers_message">Oops. Unable to load wallpapers</string>
  <string name="fragment_ensure_working_internet_connection_message">
    Please ensure you have a working internet connection</string>
  <string name="fragment_swipe_down_retry_message">Swipe down to retry</string>
  <string name="buy_pro_button">BUY PRO</string>
  <string name="restore_button">Already purchased? <b>Restore</b></string>
  <string name="pro_features_title">PRO Features</string>
  <string name="buy_pro_description">
    Buy the PRO version of the app to unlock new and amazing features and enjoy the app fully!
  </string>
  <string name="buy_pro_features_ads_header">Ads Free Experience</string>
  <string name="buy_pro_features_ads_sub_header">
    We don\'t like ads, just like you don\'t. Enjoy a complete ads free experience</string>
  <string name="buy_pro_features_downloads_header">Ultra HD Wallpaper Downloads</string>
  <string name="buy_pro_features_downloads_sub_header">
    You can now download ultra HD versions of any wallpaper of your choice and keep it in your device
  </string>
  <string name="buy_pro_features_automatic_wallpaper_changer_header">
    Automatic Wallpaper Changer</string>
  <string name="buy_pro_features_automatic_wallpaper_changer_sub_header">
    Changes your homescreen with new and fresh wallpapers automatically after a chosen period of time
  </string>
  <string name="buy_pro_features_crystallize_header">Crystallized Wallpapers</string>
  <string name="buy_pro_features_crystallize_sub_header">
    Generates a crystallized version of the current wallpaper and gives your homescreen
    an unique look and feel</string>
  <string name="buy_pro_features_share_header">Share Wallpapers</string>
  <string name="buy_pro_features_share_sub_header">
    Share your favourite wallpapers with anyone you want in just one click</string>
  <string name="buy_pro_invalid_purchase_message">Purchase is invalid</string>
  <string name="buy_pro_successful_purchase_message">
    Purchase successful! Thank you for purchasing the pro version of the app</string>
  <string name="buy_pro_successful_restore_message">
    Your purchase has been restored successfully</string>
  <string name="buy_pro_unable_to_verify_purchase_message">Unable to verify purchase</string>
  <string name="buy_pro_try_restoring_message">
    Unable to continue purchase. If you have already purchased the app, click on Restore.</string>
  <string name="buy_pro_verifying_purchase_message">Verifying your purchase, please wait...</string>
  <string name="buy_pro_verifying_restore_message">Restoring your purchase, please wait...</string>
  <string name="buy_pro_purchase_ensure_working_internet_connection_message">
    Unable to continue purchase. Please ensure you have a working internet connection</string>
  <string name="buy_pro_restore_ensure_working_internet_connection_message">
    Unable to continue restore. Please ensure you have a working internet connection</string>
  <string name="buy_pro_purchase_successful_message">
    Purchase successful! Thank you for purchasing the pro version of the app</string>
  <string name="buy_pro_restore_successful_message">
    Your purchase has been restored successfully</string>
  <string name="search_type_in_a_query_message">Type in a search query</string>
  <string name="search_no_result_message">Woah there! We found nothing for </string>
  <string name="search_retry_message">Retry</string>
  <string name="search_unable_to_search_message">Unable to search right now</string>
  <string name="search_something_went_wrong_message">Snap! Something went wrong</string>
  <string name="search_please_try_again">Please try again</string>
  <string name="search_input_a_query_and_please_try_again">Please input a search query and try again</string>
  <string name="search_view_transition_name">searchTransition</string>
  <string name="search_generic_error_message">Something went wrong. Please try again</string>
  <string name="detail_activity_enable_automatic_wallpaper_changer_from_her_messagee">
    Then you can enable the Automatic Wallpaper Changer from here</string>
  <string name="detail_activity_download_options_super_high">Super High</string>
  <string name="detail_activity_download_options_high">High</string>
  <string name="detail_activity_download_options_medium">Medium</string>
  <string name="detail_activity_download_options_low">Low</string>
  <string name="detail_activity_download_options_super_low">Super Low</string>
  <string name="detail_activity_or">Or</string>
  <string name="detail_activity_choose">CHOOSE</string>
  <string name="detail_activity_options_quick_set">QUICK SET</string>
  <string name="detail_activity_options_add_to_collection">ADD TO COLLECTION</string>
  <string name="detail_activity_options_edit_and_set">EDIT AND SET</string>
  <string name="detail_activity_choose_download_quality_message">Choose Download Quality</string>
  <string name="detail_activity_grabbing_best_quality_wallpaper_message">Grabbing the best quality wallpaper...</string>
  <string name="detail_activity_setting_up_resources_message">Setting up the necessary resources...</string>
  <string name="detail_activity_editing_tool_message">Firing up the editing tool...</string>
  <string name="detail_activity_crystallizing_wallpaper_message">Crystallizing wallpaper...</string>
  <string name="detail_activity_fetching_sharable_link_message">Fetching sharable link...</string>
  <string name="detail_activity_options_download">DOWNLOAD</string>
  <string name="detail_activity_options_save">SAVE</string>
  <string name="detail_activity_unsplash_site_referral">www.unsplash.com</string>
  <string name="detail_activity_options_share">SHARE WITH</string>
  <string name="detail_activity_download_options_full_hd">Ultra HD</string>
  <string name="detail_activity_download_options_raw">Raw</string>
  <string name="detail_activity_options_crystallize">CRYSTALLIZE</string>
  <string name="detail_activity_website_referral_unsplash">www.unsplash.com</string>
  <string name="detail_activity_wallpaper_action_progress_percentage">0%</string>
  <string name="detail_activity_share_error">
    Unable to fetch shareable link. Please ensure you have a working internet connection</string>
  <string name="detail_activity_fetch_wallpaper_error_message">
    Unable to fetch wallpaper. Please try again</string>
  <string name="detail_activity_wallpaper_download_cancelled_message">Wallpaper download cancelled</string>
  <string name="detail_activity_download_notification_title_text">Downloading wallpaper</string>
  <string name="detail_activity_download_started_message">Your wallpaper download has been started</string>
  <string name="detail_activity_download_already_in_progress_message">Your wallpaper download is already in progress</string>
  <string name="detail_activity_crystallize_dialog_description">Generates a beautiful and unique artwork of the current wallpaper using WallR\'s innovative Crystallize algorithm. It can give your device the fresh look it deserves.</string>
  <string name="detail_activity_crystallize_wallpaper_dialog_title">Crystallize Wallpaper</string>
  <string name="detail_activity_crystallize_dialog_before_text">BEFORE</string>
  <string name="detail_activity_crystallize_dialog_after_text">AFTER</string>
  <string name="detail_activity_crystallize_dialog_positive_text">TRY NOW</string>
  <string name="detail_activity_crystallize_dialog_negative_text">CANCEL</string>
  <string name="detail_activity_image_already_crystallized_message">This image has already been crystallized</string>
  <string name="detail_activity_crystallized_download_finished_message">Your crystallized wallpaper has finished downloading</string>
  <string name="minimal_fragment_unable_to_get_colors_error_message">Unable to fetch minimal wallpapers</string>
  <string name="menu_minimal_title_delete">Delete Wallpaper</string>
  <string name="minimal_fragment_cab_title">%1$d Selected</string>
  <string name="minimal_fragment_spinner_item_material">Material</string>
  <string name="minimal_fragment_spinner_item_gradient">Gradient</string>
  <string name="minimal_fragment_spinner_item_plasma">Plasma</string>
</resources>