<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:id="@+id/errorInfoRelativeLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:orientation="vertical"
    android:visibility="visible">

    <ImageView
      android:id="@+id/infoImageView"
      android:layout_width="@dimen/wallpaper_fragment_info_imageview_width"
      android:layout_height="@dimen/wallpaper_fragment_info_imageview_height"
      android:layout_gravity="center"
      android:src="@drawable/ic_error_exclamation"
      android:visibility="visible" />

    <com.zebrostudio.wallrcustoms.customtextview.WallrCustomTextView
      android:id="@+id/infoTextFirstLine"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:paddingTop="@dimen/wallpaper_fragment_info_text_first_line_padding_top"
      android:text="@string/fragment_unable_to_load_wallpapers_message"
      android:textColor="@color/white" />

    <com.zebrostudio.wallrcustoms.customtextview.WallrCustomTextView
      android:id="@+id/infoTextSecondLine"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:paddingTop="@dimen/wallpaper_fragment_info_text_second_line_padding_top"
      android:text="@string/fragment_ensure_working_internet_connection_message"
      android:textColor="@color/white" />

    <com.zebrostudio.wallrcustoms.customtextview.WallrCustomTextView
      android:id="@+id/infoTextThirdLine"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:paddingTop="@dimen/wallpaper_fragment_info_text_third_line_padding_top"
      android:text="@string/fragment_swipe_down_retry_message"
      android:textColor="@color/white" />

  </LinearLayout>

  <com.github.ybq.android.spinkit.SpinKitView
    android:id="@+id/spinkitView"
    style="@style/SpinKitView.Large.FoldingCube"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/wallpaper_fragment_center_spinkit_height"
    android:layout_gravity="center"
    android:padding="@dimen/wallpaper_fragment_center_spinkit_padding"
    android:visibility="gone"
    app:SpinKit_Color="@color/white" />

  <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:scrollbars="vertical" />

  </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>

  <View
    android:layout_width="match_parent"
    android:layout_height="@dimen/wallpaper_fragment_shadow_tab_height"
    android:layout_gravity="top"
    android:background="@drawable/shadow_bottom" />

</FrameLayout>
